# webshot

./: Cargo.toml  README.md
.github/workflows/: releases.yml
src/: config.rs  main.rs
