[package]
name = "webshot"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dirs = "5"
duration-string = "0.4"
figment = { version = "0.10", features = ["json", "yaml", "toml", "env"] }
headless_chrome = { version = "1", features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
